<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnySMSClient</string>
    <string name="user">Kundennummer:</string>
    <string name="version">Client Version: %1$s</string>
    <string name="password">Passwort:</string>
    <string name="absender">Absender\n(11 Zeichen oder 16 Ziffern\nkeine Leerstellen):</string>
    <string name="gateway">Gateway:</string>
    <string name="settings">Einstellungen</string>
    <string name="send_sms">Abschicken</string>
    <string name="save">Speichern</string>
    <string name="reset">Zurücksetzen</string>
    <string name="empfaenger">Empfänger:</string>
    <string name="Nachricht">Nachricht:</string>
    <string name="balance">Guthaben:</string>
    <string name="not_connected">Nicht eingeloggt</string>
    <string name="info">Info</string>
    <string name="refresh">Aktualisieren</string>
    <string name="set_user_pass">Bitte Benutzername, Passwort und Absender in den Einstellungen festlegen!</string>
    <string name="pls_add_message_and_receipient">Bitte einen Empfänger und ein Nachricht eingeben!</string>
    <string name="copyright">&#169; by Nico Renken\nP&amp;P Software GmbH\nhttps://www.p-und-p.de\n\nLicensed under LGPL.\nSource at https://code.google.com/p/any-sms-client\n\nAny-sms gehört der Firma mesmo GmbH\nhttp://www.any-sms.info\nwelche weder mit der P&amp;P Software GmbH noch mit Nico Renken im Zusammenhang steht.</string>
    <string name="notify">Benachrichtigung? (siehe Einstellungen zum http Gateway auf der anySMS Homepage)</string>
    <string name="empty"></string>
    <!-- URIs -->
    <string name="uri_send_sms">https://www.any-sms.biz/gateway/send_sms.php?id=%1$s&amp;pass=%2$s&amp;gateway=%3$s&amp;text=%4$s&amp;nummer=%5$s&amp;absender=%6$s&amp;notify=%7$s&amp;long=%8$s&amp;test=%9$s&amp;xml=1</string>
   
    <!-- Errors send -->
    <string name="error0">SMS wurde angenommen</string>
    <string name="error1">Falscher Username oder Passwort</string>
	<string name="error2">Falsche IP</string>
	<string name="error3">Kein ausreichendes Guthaben Main-Account</string>
	<string name="error4">Kein ausreichendes Guthaben Sub-Account</string>
	<string name="error5">SMS konnte nicht angenommen / verschickt werden</string>
	<string name="error6">Gateway in dieses Netz nicht verfügbar</string>
	<string name="error9">SPAM-Sperre (Gleicher Text an die gleiche Nummer innerhalb von 3 Minuten)</string>
	<string name="error18">Fehlende Preisangabe in der SMS (für Bewerbung von Premium-Nummern)</string>
	
	<string-array name="gateways">
	    <item>21</item>
    	<item>20</item>
    </string-array>
</resources>